Spotless.